<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Data_MR" Id="{4ed58add-5e0d-417d-8a3c-06ad917c8551}">
    <Declaration><![CDATA[TYPE ST_Data_MR :
STRUCT
	pump		:DINT;
	stage		:STRING;
	rinse1		:REAL;
	rinse2		:REAL;
	wash1		:REAL;
	wash2		:REAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>