<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Parameters_MR" Id="{f829ad56-d934-44b7-9430-3c29a09c0980}">
    <Declaration><![CDATA[TYPE ST_Parameters_MR :
STRUCT
	methodName		: STRING;
	revision		: DINT;
	createdBy		: STRING;
	createdDate		: STRING;
	solv_R1			: DINT;
	solv_R2			: DINT;
	solv_W1			: DINT;
	solv_W2			: DINT;
	stepTime_R1		: DINT;
	stepTime_R2		: DINT;
	stepTime_W1		: DINT;
	stepTime_W2		: DINT;
	stepRpm_R1		: DINT;
	stepRpm_R2		: DINT;
	stepRpm_W1		: DINT;
	stepRpm_W2		: DINT;
	soakTime		: DINT;
	agitateTime1	: DINT;
	agitateTime2	: DINT;
	vialToFill		: DINT;
	vialPrimeVol	: REAL;
	vialFillVol1	: REAL;
	vialsFillVol24	: REAL;
	airDryTime		: DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>